# otus_06_homework

./: .travis.yml  06_homework-0.0.8-Linux.deb  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  gtests  main.cpp  matrix  matrix.h  techstack.md  techstack.yml  tests.cpp
html/: _c_make_cache_8txt.html  _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  annotated.html  classes.html  classhomework_1_1_matrix-members.html  classhomework_1_1_matrix.html  classhomework_1_1_matrix_1_1_matrix_column-members.html  classhomework_1_1_matrix_1_1_matrix_column.html  classhomework_1_1_matrix_1_1_matrix_iterator-members.html  classhomework_1_1_matrix_1_1_matrix_iterator.html  classhomework_1_1_matrix_1_1_matrix_value_wraper-members.html  classhomework_1_1_matrix_1_1_matrix_value_wraper.html  classhomework_1_1_matrix_ad86653ccc2e1bde98ec7569e41baceaa_cgraph.map  classhomework_1_1_matrix_ad86653ccc2e1bde98ec7569e41baceaa_cgraph.md5  files.html  functions.html  functions_func.html  functions_rela.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  install__manifest_8txt.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  main_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  main_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  matrix_8cpp.html  matrix_8cpp__incl.map  matrix_8cpp__incl.md5  matrix_8h.html  matrix_8h__dep__incl.map  matrix_8h__dep__incl.md5  matrix_8h__incl.md5  matrix_8h_source.html  md_README.html  namespacehomework.html  (+7 more)
(+23 files in other folders)
